crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_export_duplicate.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "module Main exposing (name, name)\nname = 1"
---
nash::names::export_duplicate

  × Duplicate export `name`.
   ╭─[Main.nash:1:29]
 1 │ module Main exposing (name, name)
   ·                       ──┬─  ──┬─
   ·                         │     ╰── duplicate export
   ·                         ╰── first export
 2 │ name = 1
   ╰────
  help: Remove the duplicate export.
