crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_export_not_found.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
nash::names::export_not_found

  × Unknown exported value `naem`.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Try name instead.
