crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_export_open_alias.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
BAD EXPORT

  × The (..) syntax is for exposing variants of a custom type. It cannot be used
  │ with a type alias like `name` though.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Remove the (..) and you should be fine!
