crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_impl_context_var_not_in_head.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "impl (Equal 'name) => Equal (List 'a) where\n    equal x y = True"
---
nash::names::impl_context_var_not_in_head

  × The impl context mentions 'name, but this variable does not occur in the impl
  │ head:
   ╭─[Main.nash:1:13]
 1 │ impl (Equal 'name) => Equal (List 'a) where
   ·             ─────
 2 │     equal x y = True
   ╰────
  help: Each variable in an impl context must occur in its head. Check for a misspelled
        type variable.
