crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_impl_of_builtin_trait.snap
---
source: crates/nash-report/src/canonicalize.rs
description: impl Storable Int where
---
nash::names::impl_of_builtin_trait

  × The `Primitive.Storable` trait is owned by the compiler:
   ╭─[Main.nash:1:1]
 1 │ impl Storable Int where
   · ───────────────────────
   ╰────
  help: Its representation rules cannot be replaced by an impl. Remove this impl and use
        a type with an admitted representation.
