crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_impl_pattern_limit.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
nash::names::impl_pattern_limit

  × This impl pattern is too large or deeply nested:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Simplify the impl head.
