crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_import_ctor_by_name.snap
---
source: crates/nash-report/src/canonicalize.rs
description: import First exposing (Just)
---
nash::names::import_ctor_by_name

  × Cannot import variant `Just` directly.
   ╭─[Main.nash:1:24]
 1 │ import First exposing (Just)
   ·                        ────
   ╰────
  help: Import `Maybe(..)` to make its variants available.
