crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_import_exposing_not_found.snap
---
source: crates/nash-report/src/canonicalize.rs
description: import First exposing (name)
---
nash::names::import_exposing_not_found

  × The `First` module does not expose `name`:
   ╭─[Main.nash:1:24]
 1 │ import First exposing (name)
   ·                        ────
   ╰────
  help: Try other instead.
