crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_import_open_alias.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
BAD IMPORT

  × The `name` type alias cannot be followed by (..) like this:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Remove the (..) and it should work.
