crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_import_open_trait.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
nash::names::import_open_trait

  × The `name` trait cannot be followed by (..) like this:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: The (..) syntax exposes variants of a custom type. Remove the dots and name the
        trait methods explicitly when you need them.
